# temsalet

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  sync.py
data/: ሀ.json  ለ.json  መ.json  አ.json
javascript/: index.js  package.json
javascript/data/: ሀ.json
python/: MANIFEST.in  pyproject.toml
python/src/temsalet/: main.py  reader.py
python/src/temsalet/data/: ለ.json
src/temsalet/: __init__.py  main.py
website/: index.html  proverbs.json
